@@ -1,3 +1,9 @@
+2015-03-28  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/42328
+	* g++.dg/template/friend58.C: New.
+	* g++.dg/template/friend59.C: Likewise.
+
 2015-03-27  Tobias Burnus  <burnus@net-b.de>
 
 	PR c/65586
